--- a/blocks/pdp/gallery.css
+++ b/blocks/pdp/gallery.css
@@ -17,8 +17,10 @@
   justify-content: center;
 }
 
-.gallery.carousel > ul > li.zoomable {
-  cursor: pointer;
+@media (width >= 900px) {
+  .gallery.carousel > ul > li.zoomable {
+    cursor: pointer;
+  }
 }
 
 .gallery.carousel > ul > li picture {
